src/snapshots/squawk__parse__tests__alter_extension_contents_stmt-2.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterExtensionContentsStmt(
                    Object({
                        "action": Number(
                            1,
                        ),
                        "extname": String(
                            "hstore",
                        ),
                        "object": Object({
                            "ObjectWithArgs": Object({
                                "objargs": Array([
                                    Object({
                                        "TypeName": Object({
                                            "location": Number(
                                                52,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "anyelement",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                        }),
                                    }),
                                    Object({
                                        "TypeName": Object({
                                            "location": Number(
                                                64,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "hstore",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                        }),
                                    }),
                                ]),
                                "objname": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "populate_record",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        "objtype": Number(
                            19,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    71,
                ),
            },
        ),
    ],
)
