src/snapshots/squawk__parse__tests__alter_foreign_server_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterForeignServerStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "foo",
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "host",
                                    ),
                                    "location": Number(
                                        26,
                                    ),
                                }),
                            }),
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "foodb",
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "dbname",
                                    ),
                                    "location": Number(
                                        38,
                                    ),
                                }),
                            }),
                        ]),
                        "servername": String(
                            "foo",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    53,
                ),
            },
        ),
    ],
)
